--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,12 @@
 			<version>${tomcat.version}</version>
 			<scope>provided</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.nhnnext</groupId>
+            <artifactId>jwp-basic</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<finalName>jwp-basic</finalName>
@@ -149,3 +154,4 @@
 		</plugins>
 	</build>
 </project>
+
